kubernetes/apps/network/external-service/scrutiny/endpointslice.yaml
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: internal-scrutiny
  labels:
    kubernetes.io/service-name: internal-scrutiny
addressType: IPv4
endpoints:
  - addresses:
      - ${TRUENAS_IP}
ports:
  - port: 31054
    name: http
