kubernetes/apps/network/external-service/scrutiny/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: internal-scrutiny
spec:
  ports:
    - port: 80
      targetPort: 31054
      name: http
  clusterIP: None
