kubernetes/apps/network/external-service/scrutiny/ingress.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: external-scrutiny
  labels:
    kubernetes.io/service-name: external-scrutiny
addressType: IPv4
endpoints:
  - addresses:
      - ${TRUENAS_IP}
ports:
  - port: 31054
    name: http
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: external-scrutiny
spec:
  ports:
    - port: 80
      targetPort: 31054
      name: http
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: external-service-ingress-scrutiny
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: external
  rules:
    - host: "scrutiny.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-scrutiny
                port:
                  number: 80
